{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 105,
  "lineage": "c3fb30d6-8dd2-b571-5d8c-93ca8344c473",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:540828511394:instance/i-0a30755ee38ecb0df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a30755ee38ecb0df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "popo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00687c217b15f28a3",
            "private_dns": "ip-10-0-1-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.176",
            "public_ip": "54.237.26.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b252b23d3de621c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a69a5c5eef0dce47",
            "tags": {
              "Environment": "dev",
              "Name": "swarm-master"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "swarm-master",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0309dea0799e421ab"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.sbnt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:540828511394:instance/i-0439f0220efc2fc78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0439f0220efc2fc78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "popo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037cd1f6b81c0724d",
            "private_dns": "ip-10-0-2-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "public_ip": "3.218.240.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0516dffb33ed3c05a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eb60f66ff4bf5555",
            "tags": {
              "Environment": "dev",
              "Name": "swarm-worker"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "swarm-worker",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0309dea0799e421ab"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group",
            "aws_subnet.sbnt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:internet-gateway/igw-0027a575b09589039",
            "id": "igw-0027a575b09589039",
            "owner_id": "540828511394",
            "tags": {
              "Name": "My-IGW"
            },
            "tags_all": {
              "Name": "My-IGW",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "my_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:network-acl/acl-0112d6281a00e7f7e",
            "egress": [],
            "id": "acl-0112d6281a00e7f7e",
            "ingress": [],
            "owner_id": "540828511394",
            "subnet_ids": [],
            "tags": {
              "Name": "My-Network-ACL"
            },
            "tags_all": {
              "Name": "My-Network-ACL",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ssh_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2728486645",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0112d6281a00e7f7e",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.my_network_acl",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:route-table/rtb-040572130f1eb5f29",
            "id": "rtb-040572130f1eb5f29",
            "owner_id": "540828511394",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0027a575b09589039",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Routing-Table"
            },
            "tags_all": {
              "Name": "Public-Routing-Table",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8700c9c913aa7d",
            "route_table_id": "rtb-040572130f1eb5f29",
            "subnet_id": "subnet-0a69a5c5eef0dce47"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.sbnt",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b79a27d72fa16cf",
            "route_table_id": "rtb-040572130f1eb5f29",
            "subnet_id": "subnet-0eb60f66ff4bf5555"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_subnet.sbnt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:security-group/sg-0309dea0799e421ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0309dea0799e421ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230522094325447000000001",
            "name_prefix": "terraform-",
            "owner_id": "540828511394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbnt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-0a69a5c5eef0dce47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a69a5c5eef0dce47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Subnet-1"
            },
            "tags_all": {
              "Name": "My-Subnet-1",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:subnet/subnet-0eb60f66ff4bf5555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb60f66ff4bf5555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540828511394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-Subnet-2"
            },
            "tags_all": {
              "Name": "My-Subnet-2",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            },
            "vpc_id": "vpc-09bf7a4513840584e"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540828511394:vpc/vpc-09bf7a4513840584e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0006242783009ae4d",
            "default_route_table_id": "rtb-03190b62a9cddd169",
            "default_security_group_id": "sg-05a645797879b3d75",
            "dhcp_options_id": "dopt-92151ae9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bf7a4513840584e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03190b62a9cddd169",
            "owner_id": "540828511394",
            "tags": {
              "Name": "My-VPC"
            },
            "tags_all": {
              "Name": "My-VPC",
              "environment": "dev",
              "project": "Twala",
              "region": "us-east-1",
              "repo": "https://github.com/AppsLab-KE/backend-everyshilling.git",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}